--- a/barebones/css/system.css
+++ b/barebones/css/system.css
@@ -16,8 +16,8 @@ div.help { color: #00529b; background-color: #bde5f8; background-image: url(../.
 .pagenav_prev a, .pagenav_next a, .pagenav_first a, .pagenav_last a, .pagenav_pages a   { border: 1px solid #ccc; padding: 1px 5px; margin: 0px; -moz-border-radius: 3px;
 border-radius: 3px; color: #383838; background-color: #f7f7f7; text-decoration: none; }
 .pagenav_prev a:hover, .pagenav_next a:hover, .pagenav_first a:hover, .pagenav_last a:hover, .pagenav_pages a:hover { background: #eaeef1; }
-.pagenav_current    { color: #555; border: 1px solid #d8503a; padding: 2px 5px; margin: 0px; -moz-border-radius: 3px;
-border-radius: 3px; color: #868686; background-color: #d8503a; text-decoration: none; }
+.pagenav_current    { color: #555; border: 1px solid #0088CC; padding: 2px 5px; margin: 0px; -moz-border-radius: 3px;
+border-radius: 3px; color: #868686; background-color: #0088CC; text-decoration: none; }
 .pagenav_current a  { color: white; text-decoration: none; }
 .pagenav_small      { text-align: right; font-size: .9em; }
 .spaced				{ border: none!important; margin: 0 8px!important; padding: 0!important; }
